--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "prysma-docker",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.2.0-alpha",
+  "private": false,
   "devDependencies": {
-    "cross-spawn": "^6.0.5",
     "eslint": "^5.15.1",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
-    "prettier": "^1.16.4",
-    "spawn-args": "^0.2.0"
+    "prettier": "^1.16.4"
+
   },
   "lint-staged": {
     "src/**/*.{js,jsx,json,css}": [
@@ -19,6 +18,9 @@
   "scripts": {
     "precommit": "lint-staged"
   },
-  "main": "src/index.js",
-  "dependencies": {}
+  "main": "index.js",
+  "dependencies": {
+    "cross-spawn": "^6.0.5",
+    "minimist": "^1.2.0"
+  }
 }
